--- a/mental-health-backend/package.json
+++ b/mental-health-backend/package.json
@@ -5,10 +5,13 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.0",
     "morgan": "^1.10.1",
-    "openai": "^5.11.0"
+    "openai": "^5.11.0",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
