--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "nodemailer": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
